--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "express": "^4.17.1",
+    "history": "^4.10.1",
     "md5": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.1.0",
+    "react-router": "^5.2.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "webpack": "^4.43.0"
