--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/register": "^7.10.1",
+    "asset-require-hook": "^1.2.0",
     "babel-eslint": "^10.0.2",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
