Hydrate, y estado de redux desde  express

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
@@ -52,8 +54,6 @@
     "nodemon": "^2.0.4",
     "sass-loader": "^7.1.0",
     "webpack-cli": "^3.3.5",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-dev-server": "^3.7.2"
   }
 }
