--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development",
+    "build": "cross-env ENV=production webpack-cli --config webpack.config.js",
     "start:dev": "nodemon src/server/index.js"
   },
   "keywords": [],
@@ -24,6 +23,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "express": "^4.17.1",
+    "helmet": "^3.22.1",
     "history": "^4.10.1",
     "ignore-styles": "^5.0.1",
     "md5": "^2.2.1",
@@ -45,15 +45,17 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "compression-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.4",
     "sass-loader": "^7.1.0",
+    "terser-webpack-plugin": "^3.0.3",
     "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "webpack-manifest-plugin": "^2.2.0"
   }
 }
